scss/sections/_work.scss
.projects {
  display: flex;
  justify-content: space-between;
  width: 100%;

  // Invdividual project listing
  .project {
    @include border-radius;
    flex: 1;
    background: $black;
    margin-right: ($gutter / 2);
    margin-bottom: ($gutter / 2);
    min-height: 300px;
    overflow: hidden;

    &:last-child {
      margin-right: 0;
    }

    @media screen and (max-width: $largedevice) {
      margin-right: 0;
      min-height: 200px;
    }
  }

	@media screen and (max-width: $largedevice) {
		flex-direction: column;
  }
}

// Link to Behance
.view-behance {
  display: flex;
  justify-content: center;
  margin-right: 10px;
}

